# datahow

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_exploration.ipynb  02_plots.ipynb  03_modeling.ipynb  04_test_endpoint.ipynb
scripts/: docker_build_and_run.ps1  run_server.ps1
src/: __init__.py  api.py  config.py  data.py  inference.py  models.py  reader.py  train.py  utils.py  validation.py
src/routes/: __init__.py  health.py  predict.py
tests/: conftest.py  test_api.py  test_utils.py  test_validation.py
