[project]
name = "datahow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.0.0",
    "pandas>=2.2,<3",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
